@@ -526,17 +526,17 @@ static const CodecEntry codecs[] = {
   { "wmvdmoe2", { 0x96b57cdd, 0x8966, 0x410c,
 		 0xbb, 0x1f, 0xc9, 0x7e, 0xea, 0x76, 0x5c, 0x04 },
     GST_MAKE_FOURCC ('W', 'M', 'V', '1'), 1, "Windows Media Video",
-    "video/x-raw-yuv",
+    "video/x-raw-yuv, format=(fourcc)I420",
     "video/x-wmv, wmvversion = (int) 1" },
   { "wmvdmoe2", { 0x96b57cdd, 0x8966, 0x410c,
 		 0xbb, 0x1f, 0xc9, 0x7e, 0xea, 0x76, 0x5c, 0x04 },
     GST_MAKE_FOURCC ('W', 'M', 'V', '2'), 2, "Windows Media Video",
-    "video/x-raw-yuv",
+    "video/x-raw-yuv, format=(fourcc)I420",
     "video/x-wmv, wmvversion = (int) 2" },
   { "wmvdmoe2", { 0x96b57cdd, 0x8966, 0x410c,
 		 0xbb, 0x1f, 0xc9, 0x7e, 0xea, 0x76, 0x5c, 0x04 },
     GST_MAKE_FOURCC ('W', 'M', 'V', '3'), 3, "Windows Media Video",
-    "video/x-raw-yuv",
+    "video/x-raw-yuv, format=(fourcc)I420",
     "video/x-wmv, wmvversion = (int) 3" },
   { NULL }
 };
