@@ -1,3 +1,8 @@
+2006-08-21  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/pitfdll/dmo_venc.c: We want I420, nothing else
+	for now.
+
 2006-05-15  Wim Taymans  <wim@fluendo.com>
 
       * ext/pitfdll/dmo_adec.c: (dmo_audiodec_change_state):
